--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Anton&family=Arvo:wght@400;700&family=KoHo:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,600&display=swap"
-        rel="stylesheet">
-
-
-    <link rel="stylesheet" href="styles.css" />
-
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Melissa Huerta Dev</title>
-</head>
-
+<%- include('partials/header') %>
 <body class="noselect">
     <div class="btn-goback-up" id="btnGobackUp">
         <a href="#" class="goback-up">
@@ -211,29 +184,4 @@
             </div>
     </section>
 
-    <!-- Footer -->
-    <footer id="footer" class="container-fluid">
-        <div class="socials-links">
-            <!-- Here goes the socials links -->
-        </div>
-        <p class="footer-copy">
-            © Copyright 2022 Melissa Huerta Dev <br>
-            Made with ❤️ in Perú
-        </p>
-        <a class="flaticon" href="https://www.flaticon.com/free-icons" title="icons">
-            Icons created by Freepik - Flaticon
-        </a>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-        crossorigin="anonymous"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/getData.js"></script>
-</body>
-
-</html>
+<%- include('partials/footer') %>
