--- a/views/success.ejs
+++ b/views/success.ejs
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div>
-                        <h2 class="big-desc">E-mail has been sent! HHHJSHAJA</h2>
+                        <h2 class="big-desc">E-mail has been sent!</h2>
                         <img src="./icons/happy.png" width="80px">
                     </div>
                     <button type="button" class="btn btn-brown btn-lg download-button" onclick="history.back()">
