--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,12 +95,21 @@
     </section> 
 
     <section id="portfolio" class="container-fluid">
-            <h2 class="middle-heading">The portfolio</h2>
-            <h6>Come on! Take a glance of the last projects I had worked on :]</h6>
+        <h2 class="middle-heading">The portfolio</h2>
+        <h6>Come on! Take a glance of the last projects I had worked on :]</h6>
 
-            <div id="project-gallery" class="row projects-gallery">
-                <!-- Here goes the portfolio items -->
-            </div>
+        <div id="project-gallery" class="row projects-gallery project-cards row">
+          <!--   <div class="text-center">
+                <ul id="filters" class="filters mb-5 mx-auto   ps-0">
+                    <li class="type mb-3 mb-lg-0 active" data-filter="*">All</li>
+                    <li class="type mb-3 mb-lg-0" data-filter=".webapp">Web App</li>
+                    <li class="type mb-3 mb-lg-0" data-filter=".mobileapp">Mobile App</li>
+                    <li class="type mb-3 mb-lg-0" data-filter=".games">Games</li>
+                </ul>
+            </div> -->
+
+            <!-- Here goes the portfolio items -->
+        </div>
     </section>
 
     <section id="blog" class="container-fluid">
