--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -295,7 +295,6 @@ span {
   background: #fafafa;
   border: 1px solid rgba(0, 0, 0, 0.025);
   position: relative;
-
 }
 
 .project-card .row {
@@ -329,41 +328,9 @@ span {
   color: var(--mhdev-main);
 }
 
-/* modal */
-.modal {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.8);
-  z-index: 9999;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal video,
-.modal img {
-  width: 90%;
-  max-width: 600px;
-}
-
-.modal .btn-close {
-  position: fixed;
-  width: 50px;
-  height: 50px;
-  top: 20px;
-  right: 20px;
-  background: var(--mh-purple);
-  text-align: center;
-  cursor: pointer;
-}
-
-.modal .btn-close i {
-  color: #fff;
-  font-size: 1rem;
-  line-height: 50px;
+/* Project Page */
+.category {
+  margin-top: 20px;
 }
 
 /* Projects */
