serving projects from db

--- a/views/project.ejs
+++ b/views/project.ejs
@@ -9,10 +9,11 @@
                         <!-- Main img -->
                         <img src="<%= project.imgSrc %>" width="90%">
                         
-                        <!-- Main img -->
                         <div class="category">
-                            <% for(let i = 0; i < project.category.length; i++) {%>
-                                <span class="badge <%= project.category[i].categoryClass %>"><%= project.category[i].categoryName %></span>
+                            <span class="badge <%= project.category.class %>"><%= project.category.name %></span>
+
+                            <% for(let i = 0; i < project.technologies.length; i++) {%>
+                                <span class="badge <%= project.technologies[i].class %>"><%= project.technologies[i].name %></span>
                             <% }%>
                         </div>
                     </div>
