--- a/views/index.ejs
+++ b/views/index.ejs
@@ -139,33 +139,9 @@
 
             <section id="contact" class="container-fluid">
                 <h2 class="middle-heading">Let's work</h2>
+                <h6>You can contact me!</h6>
                 <div class="mb-4">
                     <div class="row">
-                        <div class="col-md-8 mb-md-0 mb-5">
-                            <form id="contact-form" name="contact-form" action="/sendmail" method="POST">
-                                <div class="form-row justify-content-center">
-                                    <div class="col-md-4 mb-4">
-                                        <input type="text" class="form-control form-input" id="name" name="name"
-                                            placeholder="Full name" required>
-                                    </div>
-                                    <div class="col-md-6 mb-4 ">
-                                        <input type="email" id="email" name="email" class="form-control form-input"
-                                            placeholder="E-mail" required>
-                                    </div>
-                                </div>
-                                <div class="form-row justify-content-center">
-                                    <div class="col-md-10 mb-4">
-                                        <textarea type="text" id="message" name="message" rows="6" cols="30"
-                                            placeholder="Your message" class="form-control md-textarea form-input"
-                                            required></textarea>
-                                    </div>
-                                </div>
-
-                                <input class="btn btn-brown col-md-6" type="submit" value="Send">
-
-                            </form>
-                        </div>
-
                         <div class="col-md-4 text-center">
                             <ul class="list-unstyled mb-0">
                                 <li class="contact-data"><i class="fas fa-envelope"></i>
