--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 body {
   margin: 0;
-  font-family: system-ui, sans-serif;
+  font-family: 'Playfair Display', sans-serif;
+  font-weight: 200;
 }
