--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,18 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
+html, body {
+  scroll-behavior: smooth;
+  height: 100%;
+  scroll-snap-type: y mandatory;
+}
+
 body {
   margin: 0;
   font-family: 'Playfair Display', sans-serif;
   font-weight: 200;
+}
+
+section {
+  scroll-snap-align: start;
 }
