--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ html, body {
   scroll-behavior: smooth;
   height: 100%;
   scroll-snap-type: y mandatory;
+  overscroll-behavior: none;
 }
 
 body {
